--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -2,7 +2,7 @@
 action: "Авторизоваться"
 ---
 
-{{!< login}}
+{{!< body}}
 <div class="chat__container-login">
 	<main class="main">
 		<h2 class="login__title">Вход</h2>
