--- a/src/pages/chat.hbs
+++ b/src/pages/chat.hbs
@@ -2,7 +2,7 @@
 
 
 
-{{!< login}}
+{{!< body}}
 
 <div class="chat__container">
 	<div class="chat__aside">
@@ -16,17 +16,23 @@
 	</div>
 		<div class="chat__block">
 			<div class="chat__block-header">
-				<img src="../assets/ellipse.png" alt="logo" class="chat__block-header-img">
+				<div class="chat__block-header-img">
+					<img src="../assets/ellipse.png" alt="logo">
+				</div>
 				<div class="chat__block-header-name">Андрей</div>
 				<div class="chat__block-header-option">
-					<img src="../assets/option.svg" alt="option" class="">
+					<img src="../assets/option.svg" alt="option">
 					<div class="option__block">
 					<div class="option__block-item option__block-item-add">
-						<img src="../assets/add.svg" alt="add" class="option__block-item-img">
+						<div class="option__block-item-img">
+							<img src="../assets/add.svg" alt="add">
+						</div>
 						<div class="option__block-item-text">Добавить пользователя</div>
 					</div>
 					<div class="option__block-item option__block-item-delete">
-						<img src="../assets/del.svg" alt="add" class="option__block-item-img">
+						<div class="option__block-item-img">
+							<img src="../assets/del.svg" alt="add">
+						</div>
 						<div class="option__block-item-text">Удалить пользователя</div>
 					</div>
 				</div>
@@ -47,7 +53,9 @@
 				<div class="chat__block-footer">
 					<input placeholder="Сообщение" type="text" name="message" class="chat__block-input">
 					<div class="chat__block-file">|</div>
-					<img src="../assets/arrow.svg" alt="send" class="chat__block-send">
+					<div class="chat__block-send">
+						<img src="../assets/arrow.svg" alt="send">
+					</div>
 				</div>
 				
 			</div>
