--- a/src/pages/signin.hbs
+++ b/src/pages/signin.hbs
@@ -3,7 +3,7 @@ action: "Зарегистрироваться"
 ---
 
 
-{{!< login}}
+{{!< body}}
 <div class="chat__container-login">
 	<main class="main">
 		<h2 class="login__title">Вход</h2>
