--- a/src/partials/change-info-input/change-info-input.hbs
+++ b/src/partials/change-info-input/change-info-input.hbs
@@ -1,4 +1,4 @@
 <div class="change__info">
 				<div class="change__info-key">{{this.key}}</div>
-				<input required="" class="change__info-input" type="text" name="{{this.name}}" value="{{this.value}}">
+				<input required="" class="change__info-input" type="{{this.type}}" name="{{this.name}}" value="{{this.value}}">
 			</div>
