--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,10 @@
 @import '../partials/chat-item/chat-item.scss';
 @import '../partials/profile-info-value/profile-info-value.scss';
 @import '../partials/change-info-input/change-info-input.scss';
+@import './login.scss';
+@import './pageError.scss';
+@import './chat.scss';
+@import './profile.scss';
 
 body{
 	display: flex;
@@ -11,18 +15,6 @@ body{
 	height: 100%;
 	background: #999999;
 }
-.chat {
-
-	&__container-login {
-		width: 100%;
-		height: 100%;
-		background: #999999;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-}
-//===============================
 .main {
 	min-width: 340px;
 	min-height: 460px;
@@ -30,366 +22,4 @@ body{
 	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
 	border-radius: 12px;
 	padding: 50px 30px 30px;
-}
-.login {
-
-		&__title {
-			text-align: center;
-			font-size: 20px;
-			line-height: 20px;
-			color: #FFFFFF;
-			margin-bottom: 45px;
-		}
-
-		&__form {
-			display: flex;
-			flex-direction: column;
-		}
-
-		&__link {
-			margin-top: 15px;
-			display: block;
-			font-size: 11px;
-			line-height: 11px;
-			color: #8774E1;
-			text-align: center;
-		}
-}
-
-//===================================
-.pageError {
-	width: 100%;
-	height: 100%;
-	background: #1E1E1E;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	color: #FFFFFF;
-	&__title {
-		font-size: 40px;
-		line-height: 40px;
-		margin-bottom: 10px;
-	}
-
-	&__text {
-		font-size: 20px;
-		line-height: 20px;
-		margin-bottom: 69px;
-	}
-
-	&__link {
-		font-size: 14px;
-		line-height: 11px;
-		color: #8774E1;
-	}
-}
-
-//=============================
-.chat {
-
-	&__container {
-		width: 100%;
-		height: 100%;
-		display: flex;
-	}
-
-	&__aside {
-		display: flex;
-		flex-direction: column;
-		background: #1E1E1E;
-		min-width: 400px;
-		
-		padding: 0 10px;
-	}
-
-	&__link {
-		display: inline-block;
-		align-self: end;
-		margin-top: 21px;
-		font-size: 12px;
-		line-height: 12px;
-		color: #999999;
-		transition: .3s ease;
-		&:hover{
-			color: #8774E1;
-		}
-	}
-
-	&__search {
-		width: 100%;
-		height: 32px;
-		padding-left: 45%;
-		font-size: 12px;
-		line-height: 12px;
-		color: #FFFFFF;
-		margin-top: 23px;
-		margin-bottom: 14px;
-		background: #999999;
-		border-radius: 5px;
-	}
-}
-
-
-.option {
-
-	&__block {
-		position: absolute;
-		width: 210px;
-		height: 90px;
-		top: 50px;
-		right: -10px;
-		background: #1E1E1E;
-		box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
-		border-radius: 12px;
-		padding: 10px;
-		
-	}
-
-	&__block-item {
-		cursor: pointer;
-		display: flex;
-		align-items: center;
-		padding: 5px;
-		&:last-child{
-			margin-top: 5px;
-		}
-		transition: .3s ease;
-		&:hover{
-			opacity: 0.5;
-		}
-	}
-
-	&__block-item-img {
-		margin-right: 15px;
-	}
-
-	&__block-item-text {
-		font-size: 12px;
-		line-height: 14px;
-		color: #FFFFFF;
-	}
-}
-
-
-.chat {
-
-	&__block {
-		width: 100%;
-	}
-
-	&__block-header {
-		position: relative;
-		background: #1E1E1E;
-		height: 50px;
-		display: flex;
-		align-items: center;
-	}
-
-	&__block-header-img {
-		width: 34px;
-		height: 34px;
-		margin-left: 23px;
-	}
-
-	&__block-header-name {
-		margin-left: 16px;
-		font-weight: 600;
-		font-size: 13px;
-		line-height: 13px;
-		color: #FFFFFF;
-	}
-
-	&__block-header-option {
-		cursor: pointer;
-		position: absolute;
-		top: 15px;
-		right: 30px;
-		padding: 5px;
-	}
-
-	&__block-container {
-		width: 600px;
-		margin: 0 auto;
-		display: flex;
-		flex-direction: column;
-	}
-
-	&__block-message {
-		margin-top: 550px;
-		padding: 11px;
-		background: #1E1E1E;
-		font-size: 12px;
-		line-height: 15px;
-		color: #FFFFFF;
-		max-width: 402px;
-		border-radius: 10px 10px 10px 0;
-		position: relative;
-		span{
-			position: absolute;
-			bottom: 10px;
-			right: 10px;
-			display: block;
-			background: rgba(82, 82, 82, 0.5);
-			border-radius: 30px;
-			font-size: 9px;
-			line-height: 9px;
-			color: #FFFFFF;
-			padding: 2px 7px;
-		}
-	}
-
-	&__block-message-user {
-		margin-top: 64px;
-		margin-bottom: 38px;
-		padding: 11px;
-		background: #B3A7EE;
-		font-size: 12px;
-		line-height: 15px;
-		color: #FFFFFF;
-		min-width: 114px;
-		border-radius: 10px 10px 0px 10px;
-		position: relative;
-		align-self: flex-end;
-
-		span{
-			position: absolute;
-			bottom: 10px;
-			right: 10px;
-			display: block;
-			font-size: 9px;
-			line-height: 9px;
-			color: #999999;
-			padding: 2px 7px;
-		}
-	}
-	&__block-footer{
-		position: relative;
-		display: flex;
-	}
-	&__block-input {
-		background: #1E1E1E;
-		border-radius: 30px;
-		width: 90%;
-		height: 32px;
-		padding: 10px 20px;
-		color: #FFFFFF;
-
-	}
-
-	&__block-file {
-		cursor: pointer;
-		position: absolute;
-		top: 3px;
-		right: 80px;
-		color: #FFFFFF;
-		font-size: 24px;
-	}
-
-	&__block-send {
-		cursor: pointer;
-		position: relative;
-		left: 20px;
-		width: 28px;
-		height: 28px;
-		transition: .3s ease;
-		&:hover{
-			opacity: 0.5;
-		}
-	}
-}
-
-//==================================================
-.profile {
-
-	&__container {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-
-	&__body {
-		background: #1E1E1E;
-		padding: 45px;
-		width: 601px;
-		
-		margin-top: 32px;
-		border-radius: 12px;
-		display: flex;
-		flex-direction: column;
-		position: relative;
-	}
-
-	&__image {
-		align-self: center;
-		img{
-			width: 100px;
-			height: 100px;
-		}
-	}
-
-	&__close {
-		position: absolute;
-		top: 60px;
-		right: 45px;
-		cursor: pointer;
-		transition: .3s ease;
-		&:hover{
-			opacity: 0.8;
-		}
-	}
-
-	&__back{
-		position: absolute;
-		top: 60px;
-		left: 45px;
-		cursor: pointer;
-		transition: .3s ease;
-		&:hover{
-			opacity: 0.8;
-		}
-	}
-
-
-	&__name {
-		margin-top: 21px;
-		margin-bottom: 61px;
-		font-size: 16px;
-		line-height: 16px;
-		text-align: center;
-		color: #FFFFFF;
-	}
-
-	&__items{
-		display: flex;
-		flex-direction: column;
-		margin-bottom: 60px;
-	}
-
-	&__link {
-		display: block;
-		font-size: 13px;
-		line-height: 13px;
-		color: #8774E1;
-		padding: 10px 0px;
-		border-bottom: 1px solid #8774E1;
-		cursor: pointer;
-		transition: .3s ease;
-		&:hover{
-			opacity: 0.8;
-		}
-	}
-
-	&__link-exit {
-		cursor: pointer;
-		display: block;
-		font-size: 13px;
-		line-height: 13px;
-		color: #FF0000;
-		margin-top: 10px;
-		transition: .3s ease;
-		&:hover{
-			opacity: 0.8;
-		}
-	}
 }
