--- a/src/components/controlledinput/controlledinput.scss
+++ b/src/components/controlledinput/controlledinput.scss
@@ -4,8 +4,8 @@ input::placeholder{
 }
 
 .input__lable{
-  font-size: 16px;
-  color: #FFFFFF;
+  font-size: 12px;
+  color: #999999;
 }
 
 .input__title{
