--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,11 +1,11 @@
 
 input::placeholder{
-	color: #FFFFFF;
+	color: --color-text;
 }
 
 .input__title{
 	font-size: 14px;
-	color: #FFFFFF;
+	color: --color-text;
 }
 
 .input__error {
