--- a/src/components/controlledinput/controlledinput.scss
+++ b/src/components/controlledinput/controlledinput.scss
@@ -1,16 +1,16 @@
 
 input::placeholder{
-	color: #FFFFFF;
+	color: var(--color-text);
 }
 
 .input__lable{
   font-size: 12px;
-  color: #999999;
+  color: black;
 }
 
 .input__title{
 	font-size: 14px;
-	color: #FFFFFF;
+	color: var(--color-text);
 }
 
 .input__error {
